--- a/package.json
+++ b/package.json
@@ -4,20 +4,29 @@
   "description": "Responsive information about countries",
   "author": "Frank Pettersson",
   "private": true,
+  "precommit": "npm run lint",
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
+    "dev": "nuxt-ts",
+    "build": "nuxt-ts build",
+    "generate": "nuxt-ts generate",
+    "start": "nuxt-ts start",
+    "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
+    "lintfix": "eslint --fix --ext .ts,.js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "nuxt": "^2.11.0",
+    "@nuxt/typescript-runtime": "^0.3.8",
     "@nuxtjs/axios": "^5.9.3",
-    "@nuxtjs/pwa": "^3.0.0-0"
+    "@nuxtjs/pwa": "^3.0.0-0",
+    "nuxt": "^2.11.0"
   },
   "devDependencies": {
+    "@nuxt/typescript-build": "^0.5.6",
+    "@nuxtjs/eslint-config-typescript": "^1.0.0",
+    "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
+    "eslint-loader": "^3.0.3",
     "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-vue": "^6.1.2",
     "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "pug": "^2.0.4",
